# aiperf

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml  test_datetime_json_fix.py  test_orjson_migration.py
aiperf/common/config/: config_defaults.py  output_config.py  user_config.py
aiperf/common/enums/: data_exporter_enums.py
aiperf/common/models/: record_models.py
aiperf/exporters/: csv_exporter.py  display_units_utils.py  json_exporter.py
aiperf/metrics/: metric_dicts.py
docs/: cli_options.md  comprehensive-llm-benchmarking.md  environment_variables.md  tutorial.md
docs/benchmark_modes/: timing-modes-reference.md
docs/tutorials/: audio.md  custom-dataset.md  gpu-telemetry.md  multi-url-load-balancing.md  plot.md  sglang-video-generation.md
src/aiperf/common/: bootstrap.py  environment.py  error_helpers.py  exceptions.py  factories.py  protocols.py  tokenizer.py
src/aiperf/common/config/: __init__.py  config_defaults.py  endpoint_config.py  groups.py  input_config.py  user_config.py
src/aiperf/common/enums/: __init__.py  data_exporter_enums.py  enums.py  metric_enums.py  plugin_enums.py
src/aiperf/common/mixins/: base_metrics_collector_mixin.py  command_handler_mixin.py
src/aiperf/common/models/: __init__.py  dataset_models.py  model_endpoint_info.py  record_models.py  telemetry_models.py
src/aiperf/controller/: system_controller.py
src/aiperf/credit/: issuer.py  structs.py
src/aiperf/dataset/: dataset_manager.py
src/aiperf/dataset/generator/: video.py
src/aiperf/endpoints/: huggingface_generate.py  openai_chat.py  openai_video_generation.py
src/aiperf/exporters/: console_api_error_exporter.py  metrics_base_exporter.py  metrics_csv_exporter.py  metrics_json_exporter.py  timeslice_metrics_json_exporter.py
src/aiperf/gpu_telemetry/: constants.py  dcgm_collector.py  manager.py  protocols.py  pynvml_collector.py
src/aiperf/metrics/types/: video_generation_metrics.py
src/aiperf/plot/: __init__.py  config.py  constants.py  default_plot_config.yaml  metric_names.py  plot_controller.py
src/aiperf/plot/core/: data_loader.py  plot_generator.py  plot_specs.py
src/aiperf/plugin/: __init__.py  categories.yaml  enums.py  extensible_enums.py  plugins.py  plugins.yaml
src/aiperf/post_processors/: base_metrics_processor.py
src/aiperf/records/: inference_result_parser.py
src/aiperf/server_metrics/: manager.py
src/aiperf/timing/: config.py  manager.py  phase_orchestrator.py  url_samplers.py
src/aiperf/transports/: aiohttp_client.py  aiohttp_transport.py
src/aiperf/workers/: inference_client.py  worker.py
tests/aiperf_mock_server/: app.py  models.py  pyproject.toml
tests/ci/test_docs_end_to_end/: test_runner.py
tests/component_integration/timing/: test_fixed_schedule.py
tests/data_exporters/: test_csv_exporter.py  test_json_exporter.py
tests/harness/: fake_transport.py
tests/integration/: models.py  test_custom_gpu_metrics.py  test_dcgm_faker.py  test_gpu_telemetry.py  test_utils.py  test_video.py  utils.py
tests/unit/common/: conftest.py  test_bootstrap_gc.py  test_error_helpers.py  test_tokenizer.py
tests/unit/dataset/: test_dataset_manager.py
tests/unit/endpoints/: test_video_generation_endpoint.py
tests/unit/exporters/: test_console_api_error_exporter.py
tests/unit/gpu_telemetry/: test_pynvml_collector.py  test_telemetry_data_collector.py  test_telemetry_integration.py  test_telemetry_manager.py
tests/unit/metrics/: conftest.py  test_image_metrics.py  test_video_generation_metrics.py
tests/unit/plot/: __init__.py  conftest.py  test_cache.py  test_cli_runner.py  test_constants.py  test_dashboard_components.py  test_dashboard_styling.py  test_dashboard_utils.py  test_data_loader.py  test_exceptions.py  test_experiment_classification.py  test_logging.py  test_metric_names.py  test_mode_detector.py  test_multi_run_handlers.py  test_plot_config.py  test_plot_controller.py  test_plot_generator.py  test_plot_type_handlers.py  test_png_exporter.py  test_single_run_handlers.py  test_swept_params.py
tests/unit/plugin/: conftest.py  test_extensible_enums.py
tests/unit/post_processors/: conftest.py  test_base_metrics_processor.py  test_metric_record_processor.py
tests/unit/records/: conftest.py  test_inference_result_parser.py  test_usage_passthrough.py
tests/unit/server/: test_dcgm_faker.py
tests/unit/server_metrics/: test_server_metrics_manager.py
tests/unit/timing/: test_timing_config.py  test_timing_manager.py  test_url_samplers.py
tests/unit/transports/: conftest.py  test_aiohttp_client_video.py  test_aiohttp_transport.py  test_aiohttp_transport_video.py  test_base_transport.py
tests/unit/workers/: test_worker.py
(+27 files in other folders)
