# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/aiperf/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "aiperf"
version = "0.5.0"
description = "AIPerf is a package for performance testing of AI models"
readme = "README.md"
license = {text = "Apache-2.0"}
license-files = ["LICENSE", "ATTRIBUTIONS.md"]
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
requires-python = ">=3.10"
dependencies = [
  "aiofiles~=24.1.0",
  "async-timeout>=4.0.0; python_version < '3.11'",
  "aiohttp~=3.13.3",
  "cyclopts>=4,<5",
  "ffmpeg-python~=0.2.0",
  "jinja2~=3.1.5",  # NOTE: Versions prior to 3.1.5 have vuln exploits
  "jmespath~=1.0.1",
  "billiard>=4.2.0",
  "kaleido~=1.2.0",
  "matplotlib>=3.10.0",
  "msgspec>=0.19.0,<1.0.0",
  "numpy>=1.26.4,<3",
  "nvidia-ml-py",  # Note: No version specified to be most compatible with CUDA version
  "orjson~=3.10.18",
  "pandas~=2.3.3",
  "pillow~=11.1.0",
  "plotly~=6.4.0",
  "dash~=3.1.0",
  "dash-bootstrap-components~=2.0.0",
  "prometheus_client~=0.23.1",
  "psutil~=7.0.0",
  "pyarrow>=18.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pyzmq~=26.4.0",
  "rich~=14.1.0",
  "ruamel.yaml~=0.18.12",
  "seaborn~=0.13.2",
  "setproctitle~=1.3.6",
  "soundfile~=0.13.1",
  "textual~=5.3.0",
  "tqdm>=4.67.1",
  "transformers>=4.56.0", # Lowest compatible version for dynamo backends
  "uvloop~=0.21.0; platform_system != 'Windows'",
]

# CLI Entrypoints
[project.scripts]
aiperf = "aiperf.cli:app"

# Plugin entry point definition to discover plugins at runtime
[project.entry-points."aiperf.plugins"]
aiperf = "aiperf.plugin:plugins.yaml"

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "httpx>=0.27.0",
  "looptime>=0.5",
  "pre-commit>=4.2.0",
  "pytest-asyncio",
  "pytest-cov",
  "pytest>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.0,<0.15.0",
  "scipy>=1.13.0",
  "trustme>=1.0.0",
]

[tool.ruff]
# Base settings for ruff
line-length = 88
indent-width = 4
exclude = ["__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    # pycodestyle (except E501)
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Ignore line length errors, ruff format will handle this but
# can have some lines that are slightly over due to the way formatting works
ignore = ["E501"]

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests (deselected by default)",
    "ffmpeg: marks tests that require ffmpeg to be installed (deselected by default)",
    "stress: marks tests as stress tests that generate high load (deselected by default)",
    "slow: marks tests as slow (>= 3s, run by default but can be skipped with -m 'not slow')",
    "component_integration: marks tests as component integration tests",
    "statistical: marks tests requiring statistical validation with large samples, and may not be stable by default",
    "server_unit: marks tests as unit tests for the mock server",
]
# Better console output
console_output_style = "progress"
verbosity_assertions = 2
# Show extra test summary info
# Deselect performance, ffmpeg, and stress, and statistical, and component_integration, and integration, and server_unit tests by default
# To run them: pytest -m performance, pytest -m ffmpeg, pytest -m stress, pytest -m statistical
# IDE note: When running a specific test file/function from IDE, markers are often bypassed
addopts = "--strict-markers -m 'not performance and not ffmpeg and not stress and not statistical and not component_integration and not integration and not server_unit'"
# Filter out known warnings from third-party libraries and test infrastructure
filterwarnings = [
    "ignore::RuntimeWarning:looptime",
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:unclosed file:ResourceWarning",
]

[tool.codespell]
skip = "*.pyc,*build*,tests/unit/transports/test_aiohttp_sse.py,tests/integration/assets/canary_reference_inputs.json,src/aiperf/server_metrics/units.py"
ignore-words-list = "timeslice,timeslices"
